<resources>
    <string name="app_name">Timetable App</string>
    <string name="btnGo">Go</string>
    <string name="hint">Enter Student ID</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="timetable">Timetable</string>
    <string name="modules">Modules</string>
    <string name="assignments">Assignments</string>
    <string name="settings">Settings</string>
    <string name="title_activity_nav">Nav</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="module_id">Module ID:</string>
    <string name="module_name">Module Name:</string>
    <string name="enter_module_id">Enter Module ID</string>
    <string name="enter_module_name">Enter Module Name</string>
    <string name="add_module">Add Module</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="add_class">Add Class</string>
    <string name="enter_assignment_title">Enter Assignment Title</string>
    <string name="assignment_title">Title:</string>
    <string name="assignment_todo">To Do:</string>
    <string name="enter_assignment_todo">Enter To Do</string>
    <string name="assignment_info">Info:</string>
    <string name="enter_assignment_info">Enter Info</string>
    <string name="assignment_dueDate">Due Date:</string>
    <string name="enter_assignment_dueDate">Enter Due Date</string>


    <string-array name="list_of_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="list_of_class_types">
        <item>Lecture</item>
        <item>Lab</item>
        <item>Tutorial</item>
    </string-array>
    <string name="title_activity_add_assignment">AddAssignment</string>
    <string name="timetable_logo">Timetable Logo</string>


    <string-array name="colors_for_modules">
        <item>#F44336</item>
        <item>#00E676</item>
        <item>#FF9800</item>
        <item>#9575CD</item>
        <item>#2196F3</item>
        <item>#FFEB3B</item>
        <item>#009688</item>
        <item>#4CAF50</item>
        <item>#EF5350</item>
        <item>#03A9F4</item>
        <item>#E91E63</item>
    </string-array>


    <string-array name="settings_string_array">
        <item>Reset Account</item>
    </string-array>
    <string name="title_activity_edit_assignment_details">EditAssignmentDetailsActivity</string>
    <string name="save">save</string>
    <string name="remove" />
    <string name="delete" />

</resources>
